--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,15 +10,15 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: SonarQubePrepare@6
-  inputs:
-    SonarQube: 'sonarqube_conn'
-    scannerMode: 'Other'
-- task: Maven@3
+
+
+- task: Maven@4
   inputs:
     mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
+    publishJUnitResults: true
+    testResultsFiles: '**/surefire-reports/TEST-*.xml'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
-    goals: 'clean install sonar:sonar'
+    mavenVersionOption: 'Default'
+    mavenAuthenticateFeed: false
+    effectivePomSkip: false
+    sonarQubeRunAnalysis: true
